--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ HEADER - section with my name and position
 header {
     background: url(../images/banner.jpg) no-repeat center top;
     background-size: cover;
+    
 }
 
 .banner {
@@ -504,10 +505,19 @@ footer ul li{ margin-bottom: 8px;}
 
 /* bug fix */
 
-/* portfolio cards too small on some very small device. allow scroll on portfolio section only */
-#portfolio {
-    overflow-x: scroll;
-}
-.github-card {
-    min-width: 360px;
+/* 1. portfolio cards too small on some very small device. allow scroll on portfolio section only */
+
+/* remove padding for very devices smaller than 370px*/
+@media only screen and (max-width: 370px) {
+    .portfolio_grid.row > .col-xs-12 {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .github-card {
+        min-width: 360px;
+    }
+    #portfolio {
+        overflow-x: scroll;
+    }
+    
 }
