update list style type

--- a/printable_cv/css/style.css
+++ b/printable_cv/css/style.css
@@ -29,7 +29,7 @@ p,ul li,ol li{
 	letter-spacing: .5px;
 }
 
-ul li { list-style-type: none; }
+/* ul li { list-style-type: none; } */
 
 h1,h2,h3,h4,h5,h6{
 	font: normal normal 2.125em/1.33em 'Lato';
