re apply download footer

--- a/printable_cv/css/style_2.css
+++ b/printable_cv/css/style_2.css
@@ -346,7 +346,7 @@ p#endnote { text-align: center; }
 }
 
 #download_cv a {
-    color: #25AAE2;
+    color: #afb4b6;
     text-decoration: none;
     padding: 0 5%;
     line-height: 2;
