add index_2.html and cleanup other files

--- a/printable_cv/css/style.css
+++ b/printable_cv/css/style.css
@@ -285,7 +285,6 @@ p#endnote { text-align: center; }
 .educ_sec { line-height: 2;}
 
 #download_cv {
-    display:none;
     position: fixed;  
     bottom: 0;
     right: 5px;
@@ -297,6 +296,7 @@ p#endnote { text-align: center; }
     max-width: 1050px;
     left: 50%;
     transform: translateX(-50%);
+    border: 11px solid red;
 }
 
 #download_cv a {
