--- a/printable_cv/css/style_2.css
+++ b/printable_cv/css/style_2.css
@@ -15,13 +15,13 @@
 	box-sizing: border-box;
 }
 
-.cf:before,
-.cf:after {
+.cleafix:before,
+.cleafix:after {
     content: " ";
     display: table;
 }
 
-.cf:after {
+.cleafix:after {
     clear: both;
 }
 
@@ -45,7 +45,7 @@ body {
 
 p,ul li,ol li{
 	margin:0;
-	font-size:14px;
+	/* font-size:14px; */
 	letter-spacing: .5px;
 }
 
@@ -135,16 +135,16 @@ header {
 
 
 #profile_about,
-#profile_body {
+.main-content {
     padding: 24px 30px 56px;
 }
 
-#profile_body {
+.main-content {
     display: flex;
     align-items: stretch; /* stretched height of all flex children to be equal */    
 }
 
-#profile_body .left {
+.main-col.left {
     float: left;
     width: 30%;
 
@@ -153,7 +153,7 @@ header {
     padding-right: 20px;
 }
 
-#profile_body .right {
+.main-col.right {
     float: right;
     width: 70%;
     padding-left: 20px;
@@ -203,16 +203,7 @@ h3.section-title {
 }
 
 
-
-
-/* .sec.right { text-align: center; } */
-
-
-
-
-
-
-.sec.right h4 {
+.main-col.right h4 {
     font-size: 14px;
     font-weight: 500;
 }
