--- a/printable_cv/css/style_2.css
+++ b/printable_cv/css/style_2.css
@@ -259,7 +259,7 @@ h3.section-title {
 /* .skills li:nth-child(odd){background:#25AAE2;} */
 
 /*border + tail effect*/
-.icon_list li {
+.icon-list li {
      border: 5px solid rgba(192,192,192,.7);
     padding: 5px;
     position:relative;
@@ -270,7 +270,7 @@ h3.section-title {
     margin-bottom: 30px;
 }
 
-.icon_list li:after {
+.icon-list li:after {
     content:'';
     position: absolute;
     top: 100%;
@@ -284,21 +284,21 @@ h3.section-title {
     border-right: solid 12px transparent;
 }
 
- ol.icon_list{
+ ol.icon-list{
     padding: 0;
 }
 
-.icon_list li img{
+.icon-list li img{
     width: 100%;
     height: 100%;
 }
 
-.icon_list li div{
+.icon-list li div{
     font-size: 82px;
 }
 
 
-.icon_list .link_name {
+.icon-list .link-name {
     position: relative;
     bottom: -15px;
 }
@@ -370,8 +370,8 @@ p#endnote { text-align: center; }
     .skills li,
     .banner span,
     .banner h2,
-    .icon_list a,
-    .icon_list a:visited {
+    .icon-list a,
+    .icon-list a:visited {
          color: #000;
     }
 
