--- a/printable_cv/css/style_2.css
+++ b/printable_cv/css/style_2.css
@@ -456,13 +456,21 @@ body{
 
 
 .area{
-    background: #4e54c8;  
+    z-index: -1;
+    /* background: #4e54c8;  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
+    height:100vh; */
+    /* background-attachment: scroll; */
+    /* border: 1px solid red; */
+    position: fixed;
+    width: 100%;
     height:100vh;
-    
-   
-}
+    background: #485563;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    }
 
 .circles{
     position: absolute;
