--- a/printable_cv/css/style_2.css
+++ b/printable_cv/css/style_2.css
@@ -1,3 +1,12 @@
+/* TOC
+    - CSS Variables
+    - General styles
+    - Colors
+    - By Components
+
+/* 
+
+
 /* CSS Variables */
 :root {
     --black: #363636;
@@ -27,7 +36,6 @@
     clear: both;
 }
 
-.red_border {border: red 1px solid; }
 
 html{
     box-sizing: border-box;
@@ -36,7 +44,6 @@ html{
 
 body {
 
-    /*todo: remove font-family: 'Lato', sans-serif; */
     color: var(--lighter-black);
     font-family: 'Roboto', sans-serif;
     background: #525659;
@@ -47,11 +54,9 @@ body {
 
 p,ul li,ol li{
 	margin:0;
-	/* font-size:14px; */
 	letter-spacing: .3px;
 }
 
-/* ul li { list-style-type: none; } */
 
 h1,h2,h3,h4,h5,h6{
 	text-transform:uppercase;
@@ -87,12 +92,10 @@ h1,h2,h3,h4,h5,h6{
 
 
 #wrapper {
-    background: #fff;
     width: 100%;
     max-width: 1050px;
     margin: 0 auto;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-    /* border: red 2px solid; */
 }
 
 
@@ -117,7 +120,9 @@ header {
     border: 1px solid #e6e5ea;
     color: #e6e5ea;
 }
-/*
+
+/* 
+   
 .header-icons li:first-child span{
     background: #D64840;
 }
@@ -171,15 +176,10 @@ header {
 }
 
 
-
-
-.main-content {
-    /* padding: 24px 30px 56px; */
-}
-
 .main-content {
     display: flex;
     align-items: stretch; /* stretched height of all flex children to be equal */
+    background: #fff;
 }
 
 .main-col {
@@ -489,18 +489,11 @@ body{
 
 
 .area{
-    z-index: -1;
-    /* background: #4e54c8;
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
-    width: 100%;
-    height:100vh; */
-    /* background-attachment: scroll; */
-    /* border: 1px solid red; */
+
     position: fixed;
     width: 100%;
     height:100vh;
 
-background: #575a61;
     }
 
 .circles{
